--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2186,7 +2186,7 @@ input, select, textarea {
 				color: #fff;
 				content: 'Expand';
 				display: inline-block;
-				font-size: 0.8em;
+				font-size: 1em;
 				font-weight: 400;
 				left: 50%;
 				line-height: 2.25em;
@@ -2673,12 +2673,12 @@ input, select, textarea {
 		}
 
 		.work-item h3 {
-			font-size: 1em;
+			font-size: 1.2em;
 			margin: 0 0 0.5em 0;
 		}
 
 		.work-item p {
-			font-size: 0.8em;
+			font-size: .9em;
 			line-height: 1.5em;
 			margin: 0;
 		}
