--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
 }
 
 a {
-  color: #6046f7;
+  color: #5a52a4;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #000;
   font-family: "Source Sans 3", Arial, sans-serif;
   font-weight: 400;
-  margin: 0 0 20px 0;
+  margin: 0 0 30px 0;
 }
 
 ::-webkit-selection {
@@ -99,10 +99,24 @@ h1, h2, h3, h4, h5, h6, figure {
   padding-bottom: 8px;
 }
 
+.about-me {
+  display: flex;
+  flex-direction: column;
+}
+
 .about-me-footer {
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 560px) {
+  .about-me-footer {
+    flex-direction: column;
+    justify-content: center;
+    height: 150px;
+  }
 }
 
 .icons-grid {
@@ -409,6 +423,11 @@ h1, h2, h3, h4, h5, h6, figure {
   margin: 0;
   padding: 0;
 }
+@media screen and (max-width: 560px) {
+  #fh5co-about .fh5co-social-icons {
+    margin: 25px 0;
+  }
+}
 #fh5co-about .fh5co-social-icons li {
   padding: 0;
   list-style: none;
@@ -438,7 +457,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-heading {
-  margin-bottom: 5em;
+  margin-bottom: 4em;
 }
 .fh5co-heading.fh5co-heading-sm {
   margin-bottom: 2em;
@@ -448,6 +467,11 @@ h1, h2, h3, h4, h5, h6, figure {
   margin-bottom: 20px;
   line-height: 1.5;
   color: #000;
+}
+@media screen and (max-width: 560px) {
+  .fh5co-heading h2 {
+    font-size: 30px;
+  }
 }
 .fh5co-heading p {
   font-size: 18px;
@@ -1292,7 +1316,7 @@ input[type="text"] {
 
 @media screen and (max-width: 992px) {
   .row {
-    padding: 50px 50px 0 50px;
+    padding: 15px 15px 0 15px;
   }
 }
 
