fix link hover color in footer

--- a/css/style.css
+++ b/css/style.css
@@ -1026,7 +1026,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #7776ac;
 }
 #fh5co-footer a:hover, #fh5co-footer a:active, #fh5co-footer a:focus {
-  color: #6b52fd;
+  color: #ba0cae;
 }
 #fh5co-footer p:last-child {
   margin-bottom: 0;
