--- a/css/style.css
+++ b/css/style.css
@@ -892,6 +892,8 @@ h1, h2, h3, h4, h5, h6, figure {
   -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
   -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
+  border: 1px solid #dddddd;
+  border-radius: 6px;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
