--- a/sass/style.scss
+++ b/sass/style.scss
@@ -299,7 +299,7 @@ h1, h2, h3, h4, h5, h6, figure {
 	h2 {
 		color: $brand-white;
 	}
-	.services-padding{
+	.strengths-padding{
 		padding: 7em 0;
 	}
 	.feature-left {
